wordpress/wp-content/themes/Eris/assets/sass/_presentation.scss
/* ... */
.content-date {
  color: sears( secondary-decorative );
  font-size:font-size( 11 );
}

.content-container {
  position: relative;
  .content-author, .content-comments {
    color:#333333;
    font-size: font-size( 12 );
    margin-bottom: em-adjust( .625em ); // 10px
  }
  .content-body {
    border-top:solid 1px #dddcdc;
    padding: em-adjust( .625em 0 );
  }
  .content-category {
    float:left;
    @extend .bold;
  }
  .content-date {
    float:right;
    line-height: em-adjust( 1.5em );
    .time-stamp {
      display:inline-block;
      margin-left:1.5em;
    }
  }
  .content-details {
    margin-bottom: em-adjust( .625em ); // 10px
  }
  .content-headline {
    font-size:font-size( 20 ); // 20px
    line-height:1.1em; // 22px
    margin:0 0 .625em; // 10px
    @extend .break-word;
    @extend .bold;
  }
  .share-full {
    margin-top: 10px;
  }
}
.content-body {
  p {
    color:#333333;
    // font-size: font-size( 13 ); // 13px
    line-height:1.7em;
    margin-bottom:1em;
  }
}

.span4, .span3 {
  .content-container .content-body .content-comments li {
    border-left: 0;
    float: none;
  }
}

// SINGLES PAGE
#content > section.span12 {
  border-top:solid 1px #d5d5d5;
}

#content > section.span12 > section[class*="span"] > [class*="span"]:first-child,
#content > section.span12 > section[class*="span"] > [class*="span"]:first-child .content-body:first-child,
#content > section.span12 > section[class*="span"] > [class*="span"]:first-child .content-header:first-child,
#content > section.span12 > section[class*="span"] > .dropzone-inner-wrapper > [class*="span"]:first-child,
#content > section.span12 > section[class*="span"] > .dropzone-inner-wrapper > [class*="span"]:first-child .content-body:first-child,
#content > section.span12 > section[class*="span"] > .dropzone-inner-wrapper > [class*="span"]:first-child .content-header:first-child {
  border-top: none; 
}

.page-title + .results-list > .content-body {
    border-top:none;
}

.sears{
  .post, .question {
    h1 {
      color:#067BB5;
    }
  } 
}

.single-post .comments {
  .content-body {
    border-top:none;
  }
}

.kmart{
  .post, .question {
    h1 {
      color:#980017;
    }
  } 
}

.post.content-container {
  .content-body {
    padding:em-adjust(.625em);
    img.alignleft {
      float: left;
      margin: 0 .5em .5em 0;
    }
    img.alignright {
      float: right;
      margin: 0 0 .5em .5em;
    }
  }
}

.post, .question {
  padding:inherit 0px;
  .content-body p {
    margin-bottom: em-adjust( 1.2em )
  }
}

textarea.discussion {
  border: 1px solid #d6d6d6;
  height:10em;
  width: 99%;
  @include border-radius( 4px );
}

.trigger.discussion {
  height:2em;
  margin-top:-3.75em;
  position:relative;
  text-align:right;
  z-index:9;
}

.question {
  .span2.badge, .span2.crest {
    margin-left:0px;
  }
  .content-date {
    float:left;
  }
  .actions {
    float:none;
  }
}

.comments .content-header {
  h3 {
    float:left;
  }
  h4 {
    float:left;
    font-size: font-size( 16 ); 
    font-weight:normal;
    line-height:1.75em;
    margin-left:2em;
  }
}

.question + .ugc-comment-answer_form .trigger.discussion {
  height: 1em;
  margin: 0 0 1em;
  text-align: right;
}

// FEATURED QUESTION
.featured-question {
  .content-body {
    padding:em-adjust(.625em);
  }
}

.featured-question.content-container {
  .category-image {
    float:left;
    height:em-adjust( 6.25em );
    margin:em-adjust( 0 .625em .625em 0 );
    width: em-adjust( 6.25em );
  }
}

.span4, .span3 {
  .featured-question.content-container.columns .content-body > * {
    float: none;
    width: 100%;
    margin-left: 0;
  }
}
.span4, .span3 {
  .featured-question.content-container.columns .featured {
    margin-bottom: .75em;
    &:nth-child(odd) .column {
      border-right: 0;
      padding-right: 0;
    }
  }
}

// RESULT LIST
.archive_questions .results-list, .search-results .results-list {
  margin-top: 1em;
  border: 1px solid sears( decorative );
  @include border-radius( 5px );
  & > .content-body {
    border:none;
    padding:0 em-adjust( .8em );
    & > .content-container:first-child .content-body {
      border-top:none;
    }
  }
  & > .content-header {
    border-bottom:1px solid #DDDCDC;
    border-top:none;
    padding:1.5em 0;
    width:100%;
    form {
      margin:0 .769em;
    }
  }
  .question {
    .content-date {
      float:right;
    }
  }
  .content-headline {
    font-size:font-size(13);
    margin: 1em 0;
  }
  .content-category, .content-date, .content-comments {
    font-size:font-size(11);
  }
}

.archive_posts .results-list, .archive_guides .results-list {
  & > .content-body {
    border:none;
    padding:0px;
    p {
      margin-bottom:1em;
    }
  }
  .content-category, .content-author, .content-excerpt, .content-comments, .content-share {
    font-size: font-size(13);
  }
  .content-comments {
    float:left;
    margin-bottom:0px;
  }
  .content-details {
    margin-bottom:.5em;
  }
  .content-excerpt, .content-tags {
    line-height:font-size(15);
  }
  .content-headline {
    margin-bottom:0px;
  }
  .content-share {
    float:right;
  }
  .addthis.dropmenu .sharebutton  {
    padding:0px;
  }
}

.results-list_users {
  margin-top: 1em;
  border: 1px solid sears( decorative );
  @include border-radius( 5px );
  & > .content-body {
    border:none;
    padding:0 em-adjust( .8em );
    & > .content-container:first-child .content-body {
      border-top:none;
    }
  }
  & > .content-header {
    border-bottom:1px solid #DDDCDC;
    border-top:none;
    padding:1.5em 0;
    width:100%;
    form {
      margin:0 .769em;
    }
  }
}

.member .info .content-comments li {
  float: none;
  border: 0;
  margin-top: 0;
}

// FEATURED BLOG POST
.content-container.featured-post, .content-container.featured-guide {
  .content-excerpt, .content-byline, .content-tags {
    // font-size:.75em
    font-size: font-size( 12 );
  }
}
.span4 .content-container.featured-post .span6 {
  width: 100%;
  margin-left: 0;
}
/* ... */

